[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/wc/OptionalConfirmation.gd" type="Script" id=1]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_top = 3
border_width_bottom = 3
border_color = Color( 1.5, 1.1, 2, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 3
border_width_right = 3
border_color = Color( 2.2, 1.6, 3, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[node name="OptionalConfirmation" type="Container"]
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 339.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 637.0
margin_bottom = 114.0
custom_constants/margin_right = 25
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 610.0
margin_bottom = 102.0
alignment = 1

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 600.0
margin_bottom = 30.0
text = "Title Test"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 600.0
margin_bottom = 92.0
custom_constants/separation = 100
alignment = 1

[node name="YesButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 250.0
margin_bottom = 59.0
rect_min_size = Vector2( 250, 0 )
text = "YES"

[node name="NoButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 350.0
margin_right = 600.0
margin_bottom = 59.0
rect_min_size = Vector2( 250, 0 )
text = "NO"

[node name="VerticalHighlights" type="Panel" parent="."]
margin_right = 84.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="HorizontalHighlights" type="Panel" parent="."]
margin_right = 84.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
